[package]
name = "output_vt100"
version = "0.1.0"
authors = ["Phuntsok Drak-pa <phundrak@phundrak.fr>"]
edition = "2018"
description = "Utility to activate escape codes in Windows' CMD and PowerShell"
repository = "https://github.com/Phundrak/output-vt100-rs"
keywords = ["vt100", "console", "ansi"]
readme = "README.md"
license = "GPL-3.0"
categories = ["development-tools"]

[dependencies]
winapi = { version = "0.3.6", features = ["winuser", "winbase", "consoleapi", "processenv"] }
